@@ -1,3 +1,11 @@
+2004-05-18  Mike Kestner  <mkestner@ximian.com>
+
+	* glib/MissingIntPtrCtorException.cs : new exception to throw if 
+	unable to access an IntPtr ctor on a GLib.Object subclass.  We need
+	an IntPtr ctor to be able to wrap arbitrary object handles.
+	* glib/Object.cs : have NativeType call LookupGType.
+	* glib/ObjectManager.cs : throw the new exception in a try/catch.
+
 2004-05-17  Mike Kestner  <mkestner@ximian.com>
 
 	* generator/ObjectGen.cs : Generate a .cctor that calls the assembly's
